<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:padding="30dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:src="@drawable/puzzle_title"
        android:contentDescription="@string/app_name" />

    <Button
        android:id="@+id/new_game"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="buttonClickHandler"
        android:text="@string/new_game" />

    <Button
        android:id="@+id/timed_challenge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="buttonClickHandler"
        android:text="@string/timed_challenge" />

    <Button
        android:id="@+id/instructions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="buttonClickHandler"
        android:text="@string/instructions" />

    <Button
        android:id="@+id/key_features"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="buttonClickHandler"
        android:text="@string/key_features"
        tools:ignore="InconsistentLayout" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/puzzle"
        android:contentDescription="@string/logo" />

</LinearLayout>